--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "tg-zerodev",
+  "name": "arenaton-react-native",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "upgrade:tamagui": "yarn up '*tamagui*'@latest '@tamagui/*'@latest",
-    "upgrade:tamagui:canary": "yarn up '*tamagui*'@canary '@tamagui/*'@canary",
+    "upgrade:tamagui": "pnpm update '*tamagui*'@latest '@tamagui/*'@latest",
+    "upgrade:tamagui:canary": "pnpm update '*tamagui*'@canary '@tamagui/*'@canary",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -66,6 +66,5 @@
     "react-native-get-random-values": "~1.8.0",
     "tslib": "^2.6.2"
   },
-  "private": true,
-  "packageManager": "yarn@4.0.2"
+  "private": true
 }
