--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "@expo/metro-runtime": "~3.1.3",
     "@privy-io/expo": "^0.16.3",
     "@react-navigation/native": "6.1.17",
-    "@tamagui/config": "^1.101.7",
-    "@tamagui/metro-plugin": "^1.101.7",
+    "@tamagui/config": "^1.102.1",
+    "@tamagui/metro-plugin": "^1.102.1",
     "@tamagui/toast": "1.98.1",
     "@zerodev/ecdsa-validator": "^5.3.1",
-    "@zerodev/sdk": "^5.3.2",
+    "@zerodev/sdk": "^5.3.3",
     "babel-preset-expo": "^10.0.2",
     "burnt": "^0.12.2",
-    "expo": "~50.0.19",
+    "expo": "latest",
     "expo-application": "~5.8.4",
     "expo-constants": "~15.4.6",
     "expo-crypto": "~12.8.1",
@@ -42,18 +42,18 @@
     "fastestsmallesttextencoderdecoder": "^1.0.22",
     "node-libs-react-native": "^1.2.1",
     "permissionless": "^0.1.36",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
     "react-native-reanimated": "~3.6.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-svg-transformer": "^1.4.0",
+    "react-native-svg-transformer": "^1.5.0",
     "react-native-web": "^0.19.12",
     "react-native-webview": "13.6.4",
-    "tamagui": "^1.101.7",
+    "tamagui": "^1.102.1",
     "typescript": "^5.5.3",
-    "viem": "^2.17.2"
+    "viem": "^2.17.3"
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
