--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-picker/picker": "^2.7.7",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
     "dotenv": "^16.4.5",
     "expo": "~51.0.21",
     "expo-font": "~12.0.9",
@@ -29,11 +31,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
-    "react-native-reanimated": "~3.10.1",
+    "react-native-paper": "^5.12.3",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.12"
   },
   "devDependencies": {
