--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-picker/picker": "^2.7.7",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
     "dotenv": "^16.4.5",
     "expo": "~51.0.21",
     "expo-font": "~12.0.9",
@@ -36,8 +37,10 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^15.4.0",
     "react-native-vector-icons": "^10.1.0",
-    "react-native-web": "~0.19.12"
+    "react-native-web": "~0.19.12",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.24.9",
