--- a/app.json
+++ b/app.json
@@ -32,7 +32,8 @@
     },
     "extra": {
       "privyId": "YOUR_PRIVY_ID_HERE",
-      "MONGODB_URI": "YOUR_MONGODB"
+      "MONGODB_URI": "YOUR_MONGODB",
+      "OPENAI_API_KEY": "api_key"
     }
   }
 }
