--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "paths": {
       "@/*": ["./*"],
       "@models/*": ["./models/*"],
+      "@utils/*": ["./utils/*"],
       "@cursos/*": ["./cursos/*"]
     }
   },
