--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "@/*": ["./*"],
       "@models/*": ["./models/*"],
       "@utils/*": ["./utils/*"],
+      "@openai/*": ["./utils/openai*"],
       "@cursos/*": ["./cursos/*"]
     }
   },
