--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-screens": "3.31.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^15.4.0",
+    "react-native-tts": "^4.1.1",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.12",
     "zustand": "^4.5.4"
