--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,25 @@
     "jsx": "react",
     "strict": true,
     "paths": {
-      "@/*": ["./*"],
-      "@models/*": ["./models/*"],
-      "@utils/*": ["./utils/*"],
-      "@openai/*": ["./utils/openai*"],
-      "@cursos/*": ["./cursos/*"]
+      "@/*": [
+        "./*"
+      ],
+      "@models/*": [
+        "./models/*"
+      ],
+      "@utils/*": [
+        "./utils/*"
+      ],
+      "@openai/*": [
+        "./utils/openai*"
+      ],
+      "@cursos/*": [
+        "./cursos/*"
+      ]
     }
   },
-  "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"]
+  "include": [
+    "**/*.ts",
+    "**/*.tsx"
+  ]
 }
