update stable version

--- a/rocas_global/app.json
+++ b/rocas_global/app.json
@@ -19,7 +19,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.nuevo_creyente1.rocas_global"
     },
     "web": {
       "bundler": "metro",
@@ -31,6 +32,15 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "619177fa-af75-46d6-b6f6-47581140b4be"
+      }
+    },
+    "owner": "nuevo_creyente1"
   }
 }
