--- a/rocas-global/app.json
+++ b/rocas-global/app.json
@@ -19,7 +19,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.nuevo_creyente1.rocasglobal"
     },
     "web": {
       "bundler": "metro",
