--- a/rocas-global/app.json
+++ b/rocas-global/app.json
@@ -28,7 +28,11 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-font",
+      {
+        "fonts": ["node_modules/@expo-google-fonts/inter/Inter_900Black.ttf"]
+      }
     ],
     "experiments": {
       "typedRoutes": true
