--- a/rocas-global/app.json
+++ b/rocas-global/app.json
@@ -29,10 +29,7 @@
     },
     "plugins": [
       "expo-router",
-      "expo-font",
-      {
-        "fonts": ["node_modules/@expo-google-fonts/inter/Inter_900Black.ttf"]
-      }
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true
