--- a/rocas-global/package.json
+++ b/rocas-global/package.json
@@ -34,8 +34,10 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-tts": "^4.1.1",
     "react-native-web": "~0.19.10",
-    "zustand": "^4.5.4"
+    "zustand": "^4.5.4",
+    "@react-native-community/slider": "4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
