--- a/rocas-global/package.json
+++ b/rocas-global/package.json
@@ -16,6 +16,7 @@
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo-google-fonts/lora": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-community/slider": "4.5.2",
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.22",
@@ -30,14 +31,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-tts": "^4.1.1",
     "react-native-web": "~0.19.10",
-    "zustand": "^4.5.4",
-    "@react-native-community/slider": "4.5.2"
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
