--- a/rocas-global/package.json
+++ b/rocas-global/package.json
@@ -13,28 +13,35 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@ethersproject/shims": "^5.7.0",
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo-google-fonts/lora": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
+    "@privy-io/expo": "^0.21.5",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/slider": "4.5.2",
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.22",
+    "expo-application": "~5.9.1",
     "expo-constants": "~16.0.2",
+    "expo-crypto": "~13.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.18",
+    "expo-secure-store": "~13.0.2",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "fast-text-encoding": "^1.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-pager-view": "^6.3.3",
     "react-native-reanimated": "~3.10.1",
@@ -43,6 +50,7 @@
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-tts": "^4.1.1",
     "react-native-web": "^0.19.12",
+    "react-native-webview": "13.8.6",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
