--- a/rocas-global/package.json
+++ b/rocas-global/package.json
@@ -48,9 +48,11 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-swipe-gestures": "^1.0.5",
+    "react-native-track-player": "^4.1.1",
     "react-native-tts": "^4.1.1",
     "react-native-web": "^0.19.12",
     "react-native-webview": "13.8.6",
+    "shaka-player": "^4.10.9",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
