--- a/rocas-global-v1/package.json
+++ b/rocas-global-v1/package.json
@@ -15,56 +15,77 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
-    "@react-navigation/native": "^6.0.2",
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo-google-fonts/lora": "^0.2.3",
+    "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/slider": "4.5.2",
     "@react-native-picker/picker": "2.7.5",
-    "expo-application": "~5.9.1",
-    "expo-crypto": "~13.0.2",
-    "expo-secure-store": "~13.0.2",
-    "fast-text-encoding": "^1.0.6",
-
+    "@react-navigation/native": "^6.0.2",
+    "@web3auth/react-native-sdk": "^7.0.0",
     "expo": "~51.0.22",
+    "@ethersproject/shims": "^5.7.0",
+    "@toruslabs/react-native-web-browser": "^1.1.0",
+    "@web3auth/ethereum-provider": "^8.6.2",
+    "react-native-encrypted-storage": "^4.0.3",
+
+    "ethers": "^6.13.0",
+    "expo-application": "~5.9.1",
     "expo-constants": "~16.0.2",
+    "expo-crypto": "~13.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.18",
+    "expo-secure-store": "~13.0.2",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "fast-text-encoding": "^1.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-dotenv": "^3.4.11",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-get-random-values": "^1.11.0",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-pager-view": "^6.3.3",
-    "react-native-swipe-gestures": "^1.0.5",
-    "react-native-track-player": "^4.1.1",
-    "react-native-tts": "^4.1.1",
-    "react-native-webview": "13.8.6",
-    "shaka-player": "^4.10.9",
-    "zustand": "^4.5.4",
-    "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-swipe-gestures": "^1.0.5",
+    "react-native-track-player": "^4.1.1",
+    "react-native-tts": "^4.1.1",
+    "react-native-web": "~0.19.10",
+    "react-native-webview": "13.8.6",
+    "shaka-player": "^4.10.9",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
+    "@react-native/babel-preset": "0.74.84",
+    "@react-native/eslint-config": "0.74.84",
+    "@react-native/metro-config": "0.74.84",
+    "@react-native/typescript-config": "0.74.84",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "babel-jest": "^29.6.3",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "empty-module": "^0.0.2",
+    "eslint": "^8.19.0",
+    "prettier": "2.8.8",
+    "process": "^0.11.10",
+    "react-native-get-random-values": "^1.11.0",
+    "readable-stream": "^4.5.2"
   },
   "private": true
 }
