--- a/rocas-global-v1/package.json
+++ b/rocas-global-v1/package.json
@@ -61,12 +61,14 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-swipe-gestures": "^1.0.5",
+    "react-native-tab-view": "^3.5.2",
     "react-native-track-player": "^4.1.1",
     "react-native-tts": "^4.1.1",
     "react-native-web": "~0.19.10",
     "react-native-webview": "13.8.6",
     "shaka-player": "^4.10.9",
-    "zustand": "^4.5.4"
+    "zustand": "^4.5.4",
+    "expo-linear-gradient": "~13.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
