--- a/rocas-global-v1/package.json
+++ b/rocas-global-v1/package.json
@@ -22,6 +22,7 @@
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo-google-fonts/lora": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
+    "@metamask/rpc-errors": "^6.3.1",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/slider": "4.5.2",
     "@react-native-picker/picker": "2.7.5",
@@ -39,6 +40,7 @@
     "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
     "expo-font": "~12.0.9",
+    "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.18",
     "expo-secure-store": "~13.0.2",
@@ -54,7 +56,6 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "~2.16.1",
-    "react-native-get-random-values": "^1.11.0",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-pager-view": "^6.3.3",
     "react-native-reanimated": "~3.10.1",
@@ -64,11 +65,11 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-track-player": "^4.1.1",
     "react-native-tts": "^4.1.1",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
     "react-native-webview": "13.8.6",
     "shaka-player": "^4.10.9",
-    "zustand": "^4.5.4",
-    "expo-linear-gradient": "~13.0.2"
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
