--- a/rocas-global-v1/package.json
+++ b/rocas-global-v1/package.json
@@ -69,6 +69,7 @@
     "react-native-web": "~0.19.10",
     "react-native-webview": "13.8.6",
     "shaka-player": "^4.10.9",
+    "stream-browserify": "^3.0.0",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
