--- a/rocas-global-v1/package.json
+++ b/rocas-global-v1/package.json
@@ -49,6 +49,7 @@
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
     "fast-text-encoding": "^1.0.6",
+    "openai": "^4.54.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
